# chain-compressor

./: .gitignore  Cargo.toml  LICENSE  README.md
blockstats/: zstd_cmp_stats.csv
scripts/: dl_blocks.sh
src/: lib.rs  main.rs  util.rs
