[package]
name = "chain-compressor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
async-compression = { version = "0.4.18", features = ["tokio", "zstd"] }
bitcoincore-rpc = "0.19"
hex = "0.4"
tokio = { version = "1.43", features = ["full"] }
