[package]
name = "chain-compressor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
async-compression = { version = "0.4.18", features = ["tokio", "zstd"] }
bitcoincore-rpc = "0.19"
hex = "0.4"
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }
csv = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }
bitcoin = { version = "0.32.5", features = ["serde"] }
flume = { version = "0.11.1", features = ["async"] }
tokio-util = { version = "0.7.13", features = ["full", "rt"] }
futures = "0.3"
glob = "0.3.2"
